# ddmk

./: .gitignore  CMakeLists.txt  magic.cmake
Core/: CMakeLists.txt
Mary/: CMakeLists.txt
